# python-cqrs

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose-dev.yml  docker-compose-examples.yml  docker-compose-test.yml  mkdocs.yml  pyproject.toml  pyrightconfig.json  ruff.toml
.github/workflows/: codspeed.yml  python-publish.yml  tests.yml
benchmarks/: test_benchmark_cor_request_handler.py  test_benchmark_event_handling.py  test_benchmark_request_handling.py  test_benchmark_saga_fallback.py  test_benchmark_saga_memory.py  test_benchmark_saga_sqlalchemy.py  test_benchmark_serialization.py  test_benchmark_stream_request_handler.py
benchmarks/dataclasses/: test_benchmark_cor_request_handler.py  test_benchmark_event_handling.py  test_benchmark_request_handling.py  test_benchmark_saga_fallback.py  test_benchmark_saga_memory.py  test_benchmark_saga_sqlalchemy.py  test_benchmark_serialization.py  test_benchmark_stream_request_handler.py
benchmarks/pydantic/: test_benchmark_cor_request_handler.py  test_benchmark_event_handling.py  test_benchmark_request_handling.py  test_benchmark_saga_fallback.py  test_benchmark_saga_memory.py  test_benchmark_saga_sqlalchemy.py  test_benchmark_serialization.py  test_benchmark_stream_request_handler.py
examples/: cor_mermaid.py  cor_request_fallback.py  cor_request_handler.py  dependency_injection.py  dependency_injector_integration_practical_example.py  dependency_injector_integration_simple_example.py  domain_event_handler.py  event_consuming.py  event_fallback.py  event_producing.py  fastapi_integration.py  fastapi_sse_streaming.py  kafka_event_consuming.py  kafka_event_producing.py  kafka_outboxed_event_producing.py  kafka_proto_event_consuming.py  kafka_proto_event_producing.py  request_fallback.py  request_handler.py  request_response_types.py  saga.py  saga_fallback.py  saga_fastapi_sse.py  saga_mermaid.py  saga_recovery.py  saga_recovery_scheduler.py  saga_sqlalchemy_storage.py  save_events_into_outbox.py  streaming_handler_fallback.py  streaming_handler_parallel_events.py  upload_proto.sh
examples/proto/: user_joined.proto  user_joined_pb2.py
scripts/: upload_proto.sh
src/cqrs/: __init__.py  bootstrap.py  circuit_breaker.py  generic_utils.py  mediator.py  producer.py  registry.py  response.py  types.py
src/cqrs/adapters/: amqp.py  circuit_breaker.py  kafka.py  protocol.py
src/cqrs/compressors/: __init__.py  protocol.py  zlib.py
src/cqrs/container/: __init__.py  dependency_injector.py  di.py  protocol.py
src/cqrs/decoders/: __init__.py  null.py
src/cqrs/deserializers/: __init__.py  exceptions.py  json.py  protobuf.py
src/cqrs/dispatcher/: __init__.py  dispatcher.py  event.py  exceptions.py  models.py  request.py  saga.py  streaming.py
src/cqrs/events/: __init__.py  bootstrap.py  event.py  event_emitter.py  event_handler.py  event_processor.py  fallback.py  map.py
src/cqrs/message_brokers/: __init__.py  amqp.py  devnull.py  kafka.py  protocol.py
src/cqrs/middlewares/: __init__.py  base.py  logging.py
src/cqrs/outbox/: __init__.py  map.py  mock.py  producer.py  protocol.py  repository.py  sqlalchemy.py
src/cqrs/requests/: __init__.py  bootstrap.py  cor_request_handler.py  fallback.py  map.py  mermaid.py  request.py  request_handler.py
src/cqrs/saga/: bootstrap.py  circuit_breaker.py  compensation.py  execution.py  fallback.py  mermaid.py  models.py  recovery.py  saga.py  step.py  validation.py
src/cqrs/serializers/: __init__.py  default.py  protobuf.py
tests/: conftest.py  init_database.sql  pytest-config.ini
tests/.codspeed/: results_1769812858005.json
tests/benchmarks/: __init__.py  conftest.py  storage_legacy.py
tests/benchmarks/dataclasses/: __init__.py  test_benchmark_cor_request_handler.py  test_benchmark_event_handler_chain.py  test_benchmark_event_handling.py  test_benchmark_request_handling.py  test_benchmark_saga_fallback.py  test_benchmark_saga_memory.py  test_benchmark_saga_sqlalchemy.py  test_benchmark_stream_request_handler.py
tests/benchmarks/default/: __init__.py  test_benchmark_cor_request_handler.py  test_benchmark_event_handler_chain.py  test_benchmark_event_handling.py  test_benchmark_request_handling.py  test_benchmark_saga_fallback.py  test_benchmark_saga_memory.py  test_benchmark_saga_sqlalchemy.py  test_benchmark_serialization.py  test_benchmark_stream_request_handler.py
tests/integration/: conftest.py  fixtures.py  test_decompression.py  test_event_handler_chain.py  test_event_outbox.py  test_kafka_producer.py  test_pybreaker_adapter.py  test_read_event_from_outbox.py  test_saga_mediator_memory.py  test_saga_mediator_sqlalchemy.py  test_saga_mediator_sqlalchemy_mysql.py  test_saga_mediator_sqlalchemy_postgres.py  test_saga_storage_memory.py  test_saga_storage_sqlalchemy.py  test_saga_storage_sqlalchemy_mysql.py  test_saga_storage_sqlalchemy_postgres.py  test_streaming_mediator.py
tests/unit/: test_benchmark_fixtures.py  test_bootstrap_streaming_dependency_injector.py  test_config_files.py  test_cor_mermaid.py  test_cor_request_handler.py  test_dataclass_benchmark_edge_cases.py  test_dcevent_from_dict_recursive.py  test_dependency_injector_cqrs_container.py  test_deserializers.py  test_dispatcher.py  test_domain_event_handling.py  test_event_dispatcher_follow_ups.py  test_event_emitter_handler_events.py  test_event_fallback.py  test_event_handler_events.py  test_event_notification_proto_hash.py  test_event_processor.py  test_event_producing.py  test_event_response.py  test_events_bootstrap.py  test_kafka_producer.py  test_multi_level_events_parameterized.py  test_pydantic_benchmark_edge_cases.py  test_request_fallback.py  test_request_handling.py  test_request_mediator_parallel_events.py  test_request_response.py  test_requests_bootstrap.py  test_saga_bootstrap.py  test_saga_dispatcher.py  test_saga_mediator_edge_cases.py  test_save_event_into_outbox.py  test_streaming_dispatcher.py  test_streaming_mediator.py  test_streaming_mediator_edge_cases.py  test_streaming_outbox_background_processing.py  test_workflow_configuration.py
tests/unit/test_saga/: __init__.py  (+8 more)
(+21 files in other folders)
