[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=42", "wheel"]

[project]
authors = [
  {name = "Vadim Kozyrevskiy", email = "vadikko2@mail.ru"},
  {name = "Dmitry Kutlubaev", email = "kutlubaev00@mail.ru"}
]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12"
]
dependencies = [
  "dataclass-wizard==0.*",
  "di[anyio]==0.79.2",
  "dependency-injector>=4.48.2",
  "orjson==3.*",
  "pydantic==2.*",
  "python-dotenv==1.0.1",
  "retry-async==0.1.4",
  "sqlalchemy[asyncio]==2.0.*",
  "typing-extensions>=4.0.0"
]
description = "Python CQRS pattern implementation"
maintainers = [{name = "Vadim Kozyrevskiy", email = "vadikko2@mail.ru"}]
name = "python-cqrs"
readme = "README.md"
requires-python = ">=3.10"
version = "4.7.2"

[project.optional-dependencies]
aiobreaker = ["aiobreaker>=0.3.0"]
dev = [
  # Develope tools
  "pycln==2.5.0",
  "pre-commit==3.8.0",
  "pyright==1.1.408",
  "ruff==0.6.2",
  "vermin>=1.6.0",
  "pytest-cov>=4.0.0",
  "pytest-codspeed==4.2.0",
  # Tests
  "aio-pika==9.3.0",  # from rabbit
  "aiokafka==0.10.0",  # from kafka
  "requests==2.*",  # from aiokafka
  "pytest~=7.4.2",
  "pytest-asyncio~=0.21.1",
  "pytest-env==0.6.2",
  "cryptography==42.0.2",
  "asyncmy==0.2.9",
  "redis>=5.0.0",
  # Circuit breaker for tests
  "aiobreaker>=0.3.0"  # from aiobreaker
]
examples = [
  "fastapi==0.109.*",
  "faststream[kafka]==0.5.28",
  "faker>=37.12.0",
  "uvicorn==0.32.0",
  "aiohttp==3.13.2"
]
kafka = ["aiokafka==0.10.0"]
protobuf = ["protobuf==4.25.5"]
rabbit = ["aio-pika==9.3.0"]

[project.urls]
Documentation = "https://mkdocs.python-cqrs.dev/"
Issues = "https://github.com/vadikko2/python-cqrs/issues"
Repository = "https://github.com/vadikko2/python-cqrs"

[tool.pytest.ini_options]
addopts = "--junit-xml=report.xml"
asyncio_mode = "auto"
junit_family = "xunit1"
testpaths = ["tests"]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Same as Black.
line-length = 120
indent-width = 4

# Assume Python 3.10
target-version = "py310"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`) codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = false

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"

[tool.setuptools.packages.find]
where = ["src"]

