[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=42", "wheel"]

[project]
authors = [
  {name = "Vadim Kozyrevskiy", email = "vadikko2@mail.ru"},
  {name = "Dmitry Kutlubaev", email = "kutlubaev00@mail.ru"}
]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12"
]
dependencies = [
  "dataclass-wizard==0.*",
  "di[anyio]==0.*",
  "dependency-injector>=4.0",
  "orjson==3.*",
  "pydantic==2.*",
  "sqlalchemy[asyncio]==2.0.*",
  "python-dotenv==1.*",
  "retry-async==0.1.*",
  "typing-extensions>=4.0"
]
description = "Event-Driven Architecture Framework for Distributed Systems"
maintainers = [{name = "Vadim Kozyrevskiy", email = "vadikko2@mail.ru"}]
name = "python-cqrs"
readme = "README.md"
requires-python = ">=3.10"
version = "4.10.1"

[project.optional-dependencies]
aiobreaker = ["aiobreaker>=0.3.0"]
dev = [
  # Develope tools
  "pycln==2.5.0",
  "pre-commit==3.8.0",
  "pyright==1.1.408",
  "ruff==0.6.2",
  "vermin>=1.6.0",
  "pytest-cov>=4.0.0",
  "pytest-codspeed==4.2.0",
  # Tests
  "aio-pika==9.3.0",  # from rabbit
  "aiokafka==0.10.0",  # from kafka
  "requests==2.*",  # from aiokafka
  "pytest~=7.4.2",
  "pytest-asyncio~=0.21.1",
  "pytest-env==0.6.2",
  "cryptography==42.0.2",
  "asyncmy==0.2.9",
  "asyncpg>=0.29.0",
  "redis>=5.0.0",
  # Circuit breaker for tests
  "aiobreaker>=0.3.0"  # from aiobreaker
]
examples = [
  "fastapi==0.109.*",
  "faststream[kafka]==0.5.28",
  "faker>=37.12.0",
  "uvicorn==0.32.0",
  "aiohttp==3.13.2",
  "protobuf>=4.25.8",
]
kafka = ["aiokafka==0.10.0"]
rabbit = ["aio-pika==9.3.0"]
sqlalchemy = ["sqlalchemy[asyncio]==2.0.*"]

[project.urls]
Documentation = "https://mkdocs.python-cqrs.dev/"
Issues = "https://github.com/vadikko2/python-cqrs/issues"
Repository = "https://github.com/vadikko2/python-cqrs"

[tool.pytest.ini_options]
addopts = "--junit-xml=report.xml"
asyncio_mode = "auto"
junit_family = "xunit1"
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["src"]
